--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "@portfolio/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx serve"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.0.0",
+    "@angular/cdk": "16.0.0",
     "@angular/common": "~17.0.0",
     "@angular/compiler": "~17.0.0",
     "@angular/core": "~17.0.0",
@@ -14,6 +17,10 @@
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
     "@nx/angular": "17.2.7",
+    "@spartan-ng/nx": "^0.0.1-alpha.322",
+    "@spartan-ng/ui-core": "^0.0.1-alpha.319",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
@@ -43,6 +50,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "autoprefixer": "^10.4.0",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^0.15.3",
@@ -50,8 +58,16 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~17.0.0",
     "nx": "17.2.7",
+    "postcss": "^8.4.5",
+    "postcss-import": "~14.1.0",
+    "postcss-preset-env": "~7.5.0",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.0.2",
+    "tailwindcss-animate": "^1.0.6",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2"
