--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,11 +20,23 @@
     "paths": {
       "@spartan-ng/ui-button-helm": [
         "packages/primitives/ui-button-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-icon-helm": [
+        "packages/primitives/ui-icon-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-accordion-helm": [
+        "packages/primitives/ui-accordion-helm/src/index.ts"
       ]
     }
   },
   "exclude": [
     "node_modules",
     "tmp"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
+  }
 }
