--- a/packages/primitives/ui-typography-helm/.eslintrc.json
+++ b/packages/primitives/ui-typography-helm/.eslintrc.json
@@ -1,9 +1,15 @@
 {
-  "extends": ["../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*"],
+  "extends": [
+    "../../../.eslintrc.json"
+  ],
+  "ignorePatterns": [
+    "!**/*"
+  ],
   "overrides": [
     {
-      "files": ["*.ts"],
+      "files": [
+        "*.ts"
+      ],
       "extends": [
         "plugin:@nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
@@ -13,7 +19,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "csu-portfolio",
+            "prefix": "hlm",
             "style": "camelCase"
           }
         ],
@@ -21,16 +27,29 @@
           "error",
           {
             "type": "element",
-            "prefix": "csu-portfolio",
+            "prefix": "hlm",
             "style": "kebab-case"
           }
         ]
       }
     },
     {
-      "files": ["*.html"],
-      "extends": ["plugin:@nx/angular-template"],
+      "files": [
+        "*.html"
+      ],
+      "extends": [
+        "plugin:@nx/angular-template"
+      ],
       "rules": {}
+    },
+    {
+      "files": [
+        "*.json"
+      ],
+      "parser": "jsonc-eslint-parser",
+      "rules": {
+        "@nx/dependency-checks": "error"
+      }
     }
   ]
 }
