--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
     "@ng-icons/core": "^25.1.0",
+    "@ng-icons/radix-icons": "^25.1.0",
     "@nx/angular": "17.2.7",
     "@spartan-ng/nx": "^0.0.1-alpha.322",
     "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.319",
@@ -49,6 +50,7 @@
     "@nx/workspace": "17.2.7",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~17.0.0",
+    "@spartan-ng/cli": "^0.0.1-alpha.331",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
