--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@canserkanuren/profile": ["packages/profile/src/index.ts"],
+      "@canserkanuren/work-experiences": [
+        "packages/work-experiences/src/index.ts"
+      ],
       "@spartan-ng/ui-accordion-helm": [
         "packages/primitives/ui-accordion-helm/src/index.ts"
       ],
