--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nx/jest": "17.2.7",
     "@nx/js": "17.2.7",
     "@nx/playwright": "17.2.7",
+    "@nx/vite": "17.2.7",
     "@nx/workspace": "17.2.7",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~17.0.0",
@@ -57,6 +58,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "@vitest/ui": "~0.34.6",
     "autoprefixer": "^10.4.0",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
@@ -71,12 +73,15 @@
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
-    "prettier": "^2.6.2",
+    "prettier": "^3.1.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.0.2",
     "tailwindcss-animate": "^1.0.6",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "~2.3.0",
+    "vitest": "~0.34.6"
   }
 }
