--- a/package.json
+++ b/package.json
@@ -21,10 +21,17 @@
     "@angular/router": "~17.0.0",
     "@ng-icons/core": "^25.1.0",
     "@ng-icons/radix-icons": "^25.1.0",
+    "@ngrx/component-store": "~17.0.0",
+    "@ngrx/effects": "~17.0.0",
+    "@ngrx/entity": "~17.0.0",
+    "@ngrx/router-store": "~17.0.0",
+    "@ngrx/signals": "^17.0.1",
+    "@ngrx/store": "~17.0.0",
     "@nx/angular": "17.2.7",
     "@spartan-ng/nx": "^0.0.1-alpha.322",
     "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.319",
     "@spartan-ng/ui-core": "^0.0.1-alpha.319",
+    "@spartan-ng/ui-switch-brain": "0.0.1-alpha.319",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "rxjs": "~7.8.0",
@@ -41,6 +48,8 @@
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "~17.0.0",
     "@angular/language-service": "~17.0.0",
+    "@ngrx/schematics": "~17.0.0",
+    "@ngrx/store-devtools": "~17.0.0",
     "@nx/devkit": "17.2.7",
     "@nx/eslint": "17.2.7",
     "@nx/eslint-plugin": "17.2.7",
@@ -63,6 +72,7 @@
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^0.15.3",
+    "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
