--- a/packages/tailwind-preset/project.json
+++ b/packages/tailwind-preset/project.json
@@ -1,6 +1,13 @@
 {
   "projectType": "library",
   "sourceRoot": "packages/tailwind-preset",
-  "targets": {},
+  "targets": {
+    "release": {
+      "executor": "nx-release:build-update-publish",
+      "options": {
+        "libName": "tailwind-preset"
+      }
+    }
+  },
   "tags": []
 }
