--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
     "@nx/workspace": "17.2.7",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~17.0.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^11.1.0",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^12.1.0",
     "@spartan-ng/cli": "^0.0.1-alpha.331",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
@@ -69,6 +74,7 @@
     "@typescript-eslint/parser": "^6.9.1",
     "@vitest/ui": "~0.34.6",
     "autoprefixer": "^10.4.0",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^0.15.3",
@@ -79,11 +85,13 @@
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "~17.0.0",
     "nx": "17.2.7",
+    "nx-release": "^3.1.6",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
     "prettier": "^3.1.1",
+    "replace-json-property": "^1.9.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.0.2",
     "tailwindcss-animate": "^1.0.6",
