--- a/packages/primitives/ui-accordion-helm/project.json
+++ b/packages/primitives/ui-accordion-helm/project.json
@@ -38,6 +38,12 @@
       "outputs": [
         "{options.outputFile}"
       ]
+    },
+    "release": {
+      "executor": "nx-release:build-update-publish",
+      "options": {
+        "libName": "primitives-ui-accordion-helm"
+      }
     }
   }
 }
