--- a/packages/primitives/ui-icon-helm/package.json
+++ b/packages/primitives/ui-icon-helm/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0"
+    "@angular/core": "^17.0.0",
+    "@ng-icons/core": "",
+    "@spartan-ng/ui-core": "",
+    "class-variance-authority": "",
+    "clsx": ""
   },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
-  "sideEffects": false
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  }
 }
