--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -2,11 +2,12 @@
   "name": "@canserkanuren/store",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0"
+    "@angular/core": "^17.0.0",
+    "@canserkanuren/data": "1.0.0",
+    "@ngrx/signals": ""
   },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
-  "sideEffects": false
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  }
 }
