--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,11 @@ jobs:
         id: setup-workflow
         run: |
           BRANCH=${GITHUB_REF##*/}
-          echo "CURRENT_BRANCH=$CURRENT_BRANCH" >> "$GITHUB_OUTPUT"
+          echo "CURRENT_BRANCH=${BRANCH}" >> "$GITHUB_OUTPUT"
+          PACKAGE_VERSION=$(node -e "console.log(require('./package.json').version)")
           HASH=${GITHUB_SHA::6}
-          echo "VERSION=$(date '+%Y%m%d-%H%M%S')-$HASH" >> "$GITHUB_OUTPUT"
+          VERSION=$PACKAGE_VERSION-$(date '+%Y%m%d-%H%M%S')-$HASH
+          echo "VERSION=${VERSION}" >> "$GITHUB_OUTPUT"
 
       - name: Cache npm dependencies
         id: cache-dependencies
@@ -37,7 +39,7 @@ jobs:
       - name: Update development version
         if: ${{ steps.setup-workflow.outputs.CURRENT_BRANCH != 'master' }}
         run: |
-          npm version ${{ steps.setup-worfklow.outputs.VERSION }} --no-git-tag-version
+          npm version ${{ steps.setup-workflow.outputs.VERSION }} --no-git-tag-version
 
       - name: Install requirements
         if: ${{ steps.cache-dependencies.outputs.cache-hit != 'true' }}
@@ -52,9 +54,3 @@ jobs:
       - name: Build
         run: |
           npm run build --if-present
-
-      - name: Build
-        run: |
-          npm publish
-        env:
-          GITHUB_TOKEN: ${{ SECRETS.GITHUB_TOKEN }}
