--- a/packages/primitives/ui-accordion-helm/package.json
+++ b/packages/primitives/ui-accordion-helm/package.json
@@ -2,12 +2,14 @@
   "name": "@spartan-ng/ui-accordion-helm",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0"
+    "@angular/core": "^17.0.0",
+    "@ng-icons/radix-icons": "^25.1.0",
+    "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.319",
+    "@spartan-ng/ui-core": "0.0.1-alpha.319",
+    "@spartan-ng/ui-icon-helm": "0.0.1",
+    "clsx": "^1.2.1"
   },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
+  "dependencies": {},
   "sideEffects": false,
   "publishConfig": {
     "access": "public"
