--- a/packages/primitives/ui-button-helm/package.json
+++ b/packages/primitives/ui-button-helm/package.json
@@ -2,12 +2,12 @@
   "name": "@spartan-ng/ui-button-helm",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0"
+    "@angular/core": "^17.0.0",
+    "@spartan-ng/ui-core": "0.0.1-alpha.319",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1"
   },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
+  "dependencies": {},
   "sideEffects": false,
   "publishConfig": {
     "access": "public"
