--- a/packages/primitives/ui-icon-helm/package.json
+++ b/packages/primitives/ui-icon-helm/package.json
@@ -4,10 +4,10 @@
   "peerDependencies": {
     "@angular/common": "^17.0.0",
     "@angular/core": "^17.0.0",
-    "@ng-icons/core": "",
-    "@spartan-ng/ui-core": "",
-    "class-variance-authority": "",
-    "clsx": ""
+    "@ng-icons/core": "^25.1.0",
+    "@spartan-ng/ui-core": "0.0.1-alpha.319",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1"
   },
   "sideEffects": false,
   "publishConfig": {
