--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -4,7 +4,7 @@
   "peerDependencies": {
     "@angular/core": "^17.0.0",
     "@canserkanuren/data": "1.0.0",
-    "@ngrx/signals": ""
+    "@ngrx/signals": "17.0.1"
   },
   "sideEffects": false,
   "publishConfig": {
