--- a/packages/work-experiences/package.json
+++ b/packages/work-experiences/package.json
@@ -2,12 +2,16 @@
   "name": "@canserkanuren/work-experiences",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0"
+    "@angular/core": "^17.0.0",
+    "@canserkanuren/common": "0.0.1",
+    "@canserkanuren/data": "0.0.1",
+    "@canserkanuren/store": "0.0.1",
+    "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.319",
+    "@spartan-ng/ui-accordion-helm": "0.0.1",
+    "@spartan-ng/ui-icon-helm": "0.0.1",
+    "@spartan-ng/ui-typography-helm": "0.0.1"
   },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
+  "dependencies": {},
   "sideEffects": false,
   "publishConfig": {
     "access": "public"
