--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,10 @@ jobs:
         run: |
           npm run lint --if-present
 
+      - name: Test
+        run: |
+          npm run test --if-present
+
       - name: Build
         run: |
           npm run build --if-present
