--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,13 +9,39 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - uses: nrwl/nx-set-shas@v3
+
+      - name: Use Node.js 18
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Cache npm dependencies
+        id: cache-dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ./node_modules
+          key: ${{ hashFiles('package-lock.json') }}
+
       - name: Install deps
+        if: ${{ steps.cache-dependencies.outputs.cache-hit != 'true' }}
+        continue-on-error: true
         run: npm ci
-      - name: Lint
-        run: npx nx run-many -t lint
-      - name: Test
-        run: npx nx run-many -t test --configuration=ci
+
+      - name: Linting
+        run: |
+          npm run lint --if-present
+
+      # - name: Test
+      #   run: |
+      #     npm run test --if-present
+
+      - name: Build
+        run: |
+          npm run build --if-present
+
       - name: Release
         run: npx semantic-release
         env:
