--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,5 +45,5 @@ jobs:
       - name: Release
         run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
