--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,10 +37,22 @@ jobs:
       # - name: Test
       #   run: |
       #     npm run test --if-present
-
-      - name: Build
+      - name: Test variables
         run: |
-          npm run build --if-present
+          if [ -n "$GITHUB_TOKEN" ]; then
+            echo "Github token ok "
+          else
+            echo "Github Token NOT ok"
+          fi
+          
+          if [ -n "$NPM_TOKEN" ]; then
+            echo "Npm token ok"
+          else
+            echo "Npm token NOT ok"
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_PERMISSION }}          
+          NPM_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
 
       - name: Release
         run: npx semantic-release
