--- a/packages/about/package.json
+++ b/packages/about/package.json
@@ -9,6 +9,6 @@
   "dependencies": {},
   "sideEffects": false,
   "publishConfig": {
-    "access": "public"
+    "https://npm.pkg.github.com": "public"
   }
 }
