--- a/packages/education/package.json
+++ b/packages/education/package.json
@@ -8,6 +8,6 @@
   "dependencies": {},
   "sideEffects": false,
   "publishConfig": {
-    "access": "public"
+    "https://npm.pkg.github.com": "public"
   }
 }
