--- a/packages/primitives/ui-accordion-helm/package.json
+++ b/packages/primitives/ui-accordion-helm/package.json
@@ -12,6 +12,6 @@
   "dependencies": {},
   "sideEffects": false,
   "publishConfig": {
-    "access": "public"
+    "https://npm.pkg.github.com": "public"
   }
 }
