--- a/packages/primitives/ui-button-helm/package.json
+++ b/packages/primitives/ui-button-helm/package.json
@@ -10,6 +10,6 @@
   "dependencies": {},
   "sideEffects": false,
   "publishConfig": {
-    "access": "public"
+    "https://npm.pkg.github.com": "public"
   }
 }
