--- a/packages/primitives/ui-label-helm/package.json
+++ b/packages/primitives/ui-label-helm/package.json
@@ -11,6 +11,6 @@
   "dependencies": {},
   "sideEffects": false,
   "publishConfig": {
-    "https://npm.pkg.github.com": "public"
+    "registry": "https://npm.pkg.github.com"
   }
 }
