--- a/packages/profile/package.json
+++ b/packages/profile/package.json
@@ -13,6 +13,6 @@
   "dependencies": {},
   "sideEffects": false,
   "publishConfig": {
-    "https://npm.pkg.github.com": "public"
+    "registry": "https://npm.pkg.github.com"
   }
 }
