--- a/packages/work-experiences/package.json
+++ b/packages/work-experiences/package.json
@@ -14,6 +14,6 @@
   "dependencies": {},
   "sideEffects": false,
   "publishConfig": {
-    "https://npm.pkg.github.com": "public"
+    "registry": "https://npm.pkg.github.com"
   }
 }
