--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,38 +10,18 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@canserkanuren/about": [
-        "packages/about/src/index.ts"
-      ],
-      "@canserkanuren/common": [
-        "packages/common/src/index.ts"
-      ],
-      "@canserkanuren/data": [
-        "packages/data/src/index.ts"
-      ],
-      "@canserkanuren/education": [
-        "packages/education/src/index.ts"
-      ],
-      "@canserkanuren/profile": [
-        "packages/profile/src/index.ts"
-      ],
-      "@canserkanuren/skills": [
-        "packages/skills/src/index.ts"
-      ],
-      "@canserkanuren/store": [
-        "packages/store/src/index.ts"
-      ],
-      "@canserkanuren/work-experiences": [
-        "packages/work-experiences/src/index.ts"
-      ],
+      "@canserkanuren/about": ["packages/about/src/index.ts"],
+      "@canserkanuren/common": ["packages/common/src/index.ts"],
+      "@canserkanuren/data": ["packages/data/src/index.ts"],
+      "@canserkanuren/education": ["packages/education/src/index.ts"],
+      "@canserkanuren/profile": ["packages/profile/src/index.ts"],
+      "@canserkanuren/skills": ["packages/skills/src/index.ts"],
+      "@canserkanuren/store": ["packages/store/src/index.ts"],
       "@canserkanuren/ui-accordion-helm": [
         "packages/primitives/ui-accordion-helm/src/index.ts"
       ],
@@ -60,12 +40,12 @@
       "@canserkanuren/ui-typography-helm": [
         "packages/primitives/ui-typography-helm/src/index.ts"
       ],
+      "@canserkanuren/work-experiences": [
+        "packages/work-experiences/src/index.ts"
+      ]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ],
+  "exclude": ["node_modules", "tmp"],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
