--- a/package.json
+++ b/package.json
@@ -10,81 +10,86 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.0.0",
-    "@angular/cdk": "17.0.0",
-    "@angular/common": "~17.0.0",
-    "@angular/compiler": "~17.0.0",
-    "@angular/core": "~17.0.0",
-    "@angular/forms": "~17.0.0",
-    "@angular/platform-browser": "~17.0.0",
-    "@angular/platform-browser-dynamic": "~17.0.0",
-    "@angular/router": "~17.0.0",
-    "@ng-icons/core": "^25.1.0",
-    "@ng-icons/radix-icons": "^25.1.0",
-    "@ngrx/component-store": "~17.0.0",
-    "@ngrx/effects": "~17.0.0",
-    "@ngrx/entity": "~17.0.0",
-    "@ngrx/router-store": "~17.0.0",
-    "@ngrx/signals": "^17.0.1",
-    "@ngrx/store": "~17.0.0",
-    "@nx/angular": "17.2.7",
+    "@angular/animations": "19.2.8",
+    "@angular/cdk": "19.2.11",
+    "@angular/common": "19.2.8",
+    "@angular/compiler": "19.2.8",
+    "@angular/core": "19.2.8",
+    "@angular/forms": "19.2.8",
+    "@angular/platform-browser": "19.2.8",
+    "@angular/platform-browser-dynamic": "19.2.8",
+    "@angular/router": "19.2.8",
+    "@jsverse/transloco": "^7.6.1",
+    "@jsverse/transloco-utils": "^7.0.2",
+    "@ng-icons/core": "^31.3.0",
+    "@ng-icons/radix-icons": "^31.3.0",
+    "@ngrx/component-store": "19.0.0",
+    "@ngrx/effects": "19.0.0",
+    "@ngrx/entity": "19.0.0",
+    "@ngrx/operators": "^18.0.0",
+    "@ngrx/router-store": "19.0.0",
+    "@ngrx/signals": "19.0.0",
+    "@ngrx/store": "19.0.0",
+    "@nx/angular": "20.8.1",
     "@spartan-ng/nx": "^0.0.1-alpha.322",
-    "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.319",
-    "@spartan-ng/ui-core": "^0.0.1-alpha.319",
-    "@spartan-ng/ui-switch-brain": "0.0.1-alpha.319",
+    "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.374",
+    "@spartan-ng/ui-core": "^0.0.1-alpha.374",
+    "@spartan-ng/ui-switch-brain": "0.0.1-alpha.374",
     "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1",
+    "clsx": "^2.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.0"
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.0.0",
-    "@angular-devkit/core": "~17.0.0",
-    "@angular-devkit/schematics": "~17.0.0",
-    "@angular-eslint/eslint-plugin": "~17.0.0",
-    "@angular-eslint/eslint-plugin-template": "~17.0.0",
-    "@angular-eslint/template-parser": "~17.0.0",
-    "@angular/cli": "~17.0.0",
-    "@angular/compiler-cli": "~17.0.0",
-    "@angular/language-service": "~17.0.0",
-    "@ngrx/schematics": "~17.0.0",
-    "@ngrx/store-devtools": "~17.0.0",
-    "@nx/devkit": "17.2.7",
-    "@nx/eslint": "17.2.7",
-    "@nx/eslint-plugin": "17.2.7",
-    "@nx/jest": "17.2.7",
-    "@nx/js": "17.2.7",
-    "@nx/playwright": "17.2.7",
-    "@nx/vite": "17.2.7",
-    "@nx/workspace": "17.2.7",
+    "@angular-devkit/build-angular": "19.2.9",
+    "@angular-devkit/core": "19.2.9",
+    "@angular-devkit/schematics": "19.2.9",
+    "@angular-eslint/eslint-plugin": "19.2.0",
+    "@angular-eslint/eslint-plugin-template": "19.2.0",
+    "@angular-eslint/template-parser": "19.2.0",
+    "@angular/cli": "~19.2.0",
+    "@angular/compiler-cli": "19.2.8",
+    "@angular/language-service": "19.2.8",
+    "@ngrx/schematics": "19.0.0",
+    "@ngrx/store-devtools": "19.0.0",
+    "@nx/devkit": "20.8.1",
+    "@nx/eslint": "20.8.1",
+    "@nx/eslint-plugin": "20.8.1",
+    "@nx/jest": "20.8.1",
+    "@nx/js": "20.8.1",
+    "@nx/playwright": "20.8.1",
+    "@nx/vite": "20.8.1",
+    "@nx/workspace": "20.8.1",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "~17.0.0",
+    "@schematics/angular": "19.2.9",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/release-notes-generator": "^12.1.0",
-    "@spartan-ng/cli": "^0.0.1-alpha.331",
-    "@swc-node/register": "~1.6.7",
-    "@swc/core": "~1.3.85",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "@vitest/ui": "~0.34.6",
+    "@spartan-ng/cli": "^0.0.1-alpha.447",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.7",
+    "@types/jest": "29.5.14",
+    "@types/node": "^18.16.9",
+    "@typescript-eslint/eslint-plugin": "7.16.0",
+    "@typescript-eslint/parser": "7.16.0",
+    "@typescript-eslint/utils": "^7.16.0",
+    "@vitest/ui": "1.3.1",
     "autoprefixer": "^10.4.0",
     "conventional-changelog-conventionalcommits": "^7.0.2",
-    "eslint": "~8.48.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "8.57.1",
+    "eslint-config-prettier": "10.0.0",
     "eslint-plugin-playwright": "^0.15.3",
     "jasmine-marbles": "~0.9.1",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-preset-angular": "~13.1.4",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-preset-angular": "14.4.2",
+    "jiti": "2.4.2",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "~17.0.0",
-    "nx": "17.2.7",
+    "ng-packagr": "19.2.2",
+    "nx": "20.8.1",
     "nx-release": "^3.3.0",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
@@ -92,14 +97,14 @@
     "postcss-url": "~10.1.3",
     "prettier": "^3.1.1",
     "replace-json-property": "^1.9.0",
-    "tailwind-merge": "^1.14.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.0.2",
     "tailwindcss-animate": "^1.0.6",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.2.2",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "~2.3.0",
-    "vitest": "~0.34.6"
+    "typescript": "5.7.3",
+    "vite": "6.0.0",
+    "vite-plugin-dts": "4.5.3",
+    "vitest": "1.3.1"
   }
 }
