--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@spartan-ng/ui-switch-brain": "0.0.1-alpha.374",
     "class-variance-authority": "^0.6.0",
     "clsx": "^2.1.1",
+    "luxon": "^3.6.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "0.15.0"
@@ -73,6 +74,7 @@
     "@swc-node/register": "1.9.2",
     "@swc/core": "1.5.7",
     "@types/jest": "29.5.14",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^18.16.9",
     "@typescript-eslint/eslint-plugin": "7.16.0",
     "@typescript-eslint/parser": "7.16.0",
