--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.2.8",
-    "@angular/cdk": "19.2.11",
-    "@angular/common": "19.2.8",
-    "@angular/compiler": "19.2.8",
-    "@angular/core": "19.2.8",
-    "@angular/forms": "19.2.8",
-    "@angular/platform-browser": "19.2.8",
-    "@angular/platform-browser-dynamic": "19.2.8",
-    "@angular/router": "19.2.8",
+    "@angular/animations": "21.1.2",
+    "@angular/cdk": "21.1.2",
+    "@angular/common": "21.1.2",
+    "@angular/compiler": "21.1.2",
+    "@angular/core": "21.1.2",
+    "@angular/forms": "21.1.2",
+    "@angular/platform-browser": "21.1.2",
+    "@angular/platform-browser-dynamic": "21.1.2",
+    "@angular/router": "21.1.2",
     "@jsverse/transloco": "^7.6.1",
     "@jsverse/transloco-utils": "^7.0.2",
     "@ng-icons/core": "^31.3.0",
     "@ng-icons/radix-icons": "^31.3.0",
-    "@ngrx/component-store": "19.0.0",
-    "@ngrx/effects": "19.0.0",
-    "@ngrx/entity": "19.0.0",
-    "@ngrx/operators": "^18.0.0",
-    "@ngrx/router-store": "19.0.0",
-    "@ngrx/signals": "19.0.0",
-    "@ngrx/store": "19.0.0",
-    "@nx/angular": "20.8.1",
+    "@ngrx/component-store": "21.0.1",
+    "@ngrx/effects": "21.0.1",
+    "@ngrx/entity": "21.0.1",
+    "@ngrx/operators": "21.0.1",
+    "@ngrx/router-store": "21.0.1",
+    "@ngrx/signals": "21.0.1",
+    "@ngrx/store": "21.0.1",
+    "@nx/angular": "22.4.4",
     "@spartan-ng/nx": "^0.0.1-alpha.322",
     "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.374",
     "@spartan-ng/ui-core": "^0.0.1-alpha.374",
@@ -41,30 +41,30 @@
     "luxon": "^3.6.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "0.15.0"
+    "zone.js": "0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.9",
-    "@angular-devkit/core": "19.2.9",
-    "@angular-devkit/schematics": "19.2.9",
-    "@angular-eslint/eslint-plugin": "19.2.0",
-    "@angular-eslint/eslint-plugin-template": "19.2.0",
-    "@angular-eslint/template-parser": "19.2.0",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "19.2.8",
-    "@angular/language-service": "19.2.8",
-    "@ngrx/schematics": "19.0.0",
-    "@ngrx/store-devtools": "19.0.0",
-    "@nx/devkit": "20.8.1",
-    "@nx/eslint": "20.8.1",
-    "@nx/eslint-plugin": "20.8.1",
-    "@nx/jest": "20.8.1",
-    "@nx/js": "20.8.1",
-    "@nx/playwright": "20.8.1",
-    "@nx/vite": "20.8.1",
-    "@nx/workspace": "20.8.1",
+    "@angular-devkit/build-angular": "21.1.2",
+    "@angular-devkit/core": "21.1.2",
+    "@angular-devkit/schematics": "21.1.2",
+    "@angular-eslint/eslint-plugin": "21.2.0",
+    "@angular-eslint/eslint-plugin-template": "21.2.0",
+    "@angular-eslint/template-parser": "21.2.0",
+    "@angular/cli": "21.1.2",
+    "@angular/compiler-cli": "21.1.2",
+    "@angular/language-service": "21.1.2",
+    "@ngrx/schematics": "21.0.1",
+    "@ngrx/store-devtools": "21.0.1",
+    "@nx/devkit": "22.4.4",
+    "@nx/eslint": "22.4.4",
+    "@nx/eslint-plugin": "22.4.4",
+    "@nx/jest": "22.4.4",
+    "@nx/js": "22.4.4",
+    "@nx/playwright": "22.4.4",
+    "@nx/vite": "22.4.4",
+    "@nx/workspace": "22.4.4",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "19.2.9",
+    "@schematics/angular": "21.1.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/exec": "^6.0.3",
@@ -73,26 +73,26 @@
     "@spartan-ng/cli": "^0.0.1-alpha.447",
     "@swc-node/register": "1.9.2",
     "@swc/core": "1.5.7",
-    "@types/jest": "29.5.14",
+    "@types/jest": "30.0.0",
     "@types/luxon": "^3.6.2",
-    "@types/node": "^18.16.9",
-    "@typescript-eslint/eslint-plugin": "7.16.0",
-    "@typescript-eslint/parser": "7.16.0",
-    "@typescript-eslint/utils": "^7.16.0",
-    "@vitest/ui": "1.3.1",
+    "@types/node": "^20.19.0",
+    "@typescript-eslint/eslint-plugin": "8.54.0",
+    "@typescript-eslint/parser": "8.54.0",
+    "@typescript-eslint/utils": "8.54.0",
+    "@vitest/ui": "4.0.18",
     "autoprefixer": "^10.4.0",
     "conventional-changelog-conventionalcommits": "^7.0.2",
     "eslint": "8.57.1",
     "eslint-config-prettier": "10.0.0",
     "eslint-plugin-playwright": "^0.15.3",
     "jasmine-marbles": "~0.9.1",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "14.4.2",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "30.2.0",
+    "jest-preset-angular": "16.0.0",
     "jiti": "2.4.2",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "19.2.2",
-    "nx": "20.8.1",
+    "ng-packagr": "21.1.0",
+    "nx": "22.4.4",
     "nx-release": "^3.3.0",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
@@ -103,11 +103,11 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.0.2",
     "tailwindcss-animate": "^1.0.6",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "29.4.6",
     "ts-node": "10.9.1",
-    "typescript": "5.7.3",
+    "typescript": "5.9.3",
     "vite": "6.0.0",
     "vite-plugin-dts": "4.5.3",
-    "vitest": "1.3.1"
+    "vitest": "4.0.18"
   }
 }
