build: remove peerDeps from internal packages

--- a/packages/about/package.json
+++ b/packages/about/package.json
@@ -1,14 +1,6 @@
 {
   "name": "@canserkanuren/about",
   "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/core": "^17.0.0",
-    "@canserkanuren/store": "0.0.1",
-    "@canserkanuren/ui-typography-helm": "0.0.1"
-  },
   "dependencies": {},
-  "sideEffects": false,
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  }
+  "sideEffects": false
 }
