--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -4,8 +4,5 @@
   "dependencies": {},
   "main": "./index.js",
   "module": "./index.mjs",
-  "typings": "./index.d.ts",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  }
+  "typings": "./index.d.ts"
 }
