--- a/packages/primitives/ui-label-helm/package.json
+++ b/packages/primitives/ui-label-helm/package.json
@@ -1,16 +1,6 @@
 {
   "name": "@canserkanuren/ui-label-helm",
   "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@spartan-ng/ui-core": "0.0.1-alpha.319",
-    "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1"
-  },
   "dependencies": {},
-  "sideEffects": false,
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  }
+  "sideEffects": false
 }
