--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@jsverse/transloco": "^7.6.1",
     "@jsverse/transloco-utils": "^7.0.2",
     "@ng-icons/core": "^31.3.0",
+    "@ng-icons/lucide": ">=29.0.0",
     "@ng-icons/radix-icons": "^31.3.0",
     "@ngrx/component-store": "21.0.1",
     "@ngrx/effects": "21.0.1",
@@ -32,11 +33,12 @@
     "@ngrx/signals": "21.0.1",
     "@ngrx/store": "21.0.1",
     "@nx/angular": "22.4.4",
+    "@spartan-ng/brain": "0.0.1-alpha.447",
     "@spartan-ng/nx": "^0.0.1-alpha.322",
     "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.374",
     "@spartan-ng/ui-core": "^0.0.1-alpha.374",
     "@spartan-ng/ui-switch-brain": "0.0.1-alpha.374",
-    "class-variance-authority": "^0.6.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "luxon": "^3.6.1",
     "rxjs": "~7.8.0",
@@ -50,6 +52,7 @@
     "@angular-eslint/eslint-plugin": "21.2.0",
     "@angular-eslint/eslint-plugin-template": "21.2.0",
     "@angular-eslint/template-parser": "21.2.0",
+    "@angular/build": "21.1.2",
     "@angular/cli": "21.1.2",
     "@angular/compiler-cli": "21.1.2",
     "@angular/language-service": "21.1.2",
@@ -73,6 +76,7 @@
     "@spartan-ng/cli": "^0.0.1-alpha.447",
     "@swc-node/register": "1.9.2",
     "@swc/core": "1.5.7",
+    "@swc/helpers": "~0.5.11",
     "@types/jest": "30.0.0",
     "@types/luxon": "^3.6.2",
     "@types/node": "^20.19.0",
@@ -90,6 +94,7 @@
     "jest-environment-jsdom": "30.2.0",
     "jest-preset-angular": "16.0.0",
     "jiti": "2.4.2",
+    "jsdom": "^27.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "21.1.0",
     "nx": "22.4.4",
@@ -98,7 +103,7 @@
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
-    "prettier": "^3.1.1",
+    "prettier": "~3.6.2",
     "replace-json-property": "^1.9.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.0.2",
